# Fractal-CA-Generator

./: .gitignore  Cargo.toml  EXPERIMENT_RESULTS.md  GEMINI.md  Makefile  README.md  THEORETICAL_FOUNDATIONS.md  fractal-ca  install.bat  install.sh  titan_latents.npz
engine/: Cargo.toml
engine/src/: main.rs
python/: chaos_agent.py  chaos_lab.py  deep_time.py  engine_utils.py  observe_titan.py  priming_agent.py  requirements.txt  rl_brain.py  titan_brain.py
src/: core.rs  main.rs
